infrastructure/k8s/base/ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flexobo-ingress
  namespace: flexobo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:677109604279:certificate/15aab3c5-edd4-4f08-a02e-95079265d06d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: 200-404
    alb.ingress.kubernetes.io/group.name: flexobo-dev
spec:
  ingressClassName: alb
  rules:
    # Main Service (port 3008)
    - host: dev-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 3008
    # Users Service (port 3005)
    - host: dev-users-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 3005
    # Chat Service (port 3006)
    - host: dev-chat-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 3006
    # File Service (port 3007)
    - host: dev-file-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-service
                port:
                  number: 3007
    # Billing Service (port 3009)
    - host: dev-billing-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 3009
    # Notification Service (port 3010)
    - host: dev-notification-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3010
    # Telegram Service (port 3012)
    - host: dev-telegram-api.flexobo-mock.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telegram-service
                port:
                  number: 3012
